clusters/apps/base/network-system/unifi/vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: unifi
  namespace: istio-system
spec:
  hosts:
    - 'unifi.${SECRET_DOMAIN}'
  gateways:
    - istio-system/main
  http:
    - match:
        - port: 443
      route:
        - destination:
            port:
              number: 8443
            host: unifi-gui.network-system.svc.cluster.local
